--- a/FrontEnd/src/app/module/position/position.component.html
+++ b/FrontEnd/src/app/module/position/position.component.html
@@ -12,8 +12,11 @@
 							<i class="bi bi-plus-circle" style="font-size: 20px;"></i> New Position
 						</button>
 					</div>
+					<mat-slide-toggle (change)="this.handleOnlyMine($event)" class="my-auto ms-4" color="accent">Only
+						mine</mat-slide-toggle>
+
 					}
-					<div class="ms-auto d-flex flex-row">
+					<div class=" ms-auto d-flex flex-row">
 						<div style="font-size: 18px;" class="my-auto me-2">Sort: </div>
 						<select class="form-select border-1 border-dark shadow" (change)="handleSortSelect($event)"
 							[value]="this.sortString" aria-label="Default select example">
