--- a/FrontEnd/src/app/module/cv/cv.component.html
+++ b/FrontEnd/src/app/module/cv/cv.component.html
@@ -1,9 +1,10 @@
-<mat-tab-group>
+<!-- <mat-tab-group>
 	<mat-tab>
 		<ng-template mat-tab-label>
 			<i class="fa-regular fa-user"></i>
 			<span class="px-3">Candiate's profile</span>
 		</ng-template>
+
 		<div class="d-block justify-content-center p-5 border-info rounded">
 			<app-candidate-profile></app-candidate-profile>
 		</div>
@@ -28,4 +29,25 @@
 			<app-job-preference></app-job-preference>
 		</div>
 	</mat-tab>
-</mat-tab-group>
+</mat-tab-group> -->
+
+<nav mat-tab-nav-bar>
+	<a
+		mat-tab-link
+		[routerLink]="['/cv/candidateProfile']"
+		routerLinkActive
+		#rla1="routerLinkActive"
+		[active]="rla1.isActive"></a>
+	<a
+		mat-tab-link
+		[routerLink]="['/cv/candidateProfile']"
+		routerLinkActive
+		#rla1="routerLinkActive"
+		[active]="rla1.isActive"></a>
+	<a
+		mat-tab-link
+		[routerLink]="['/cv/candidateProfile']"
+		routerLinkActive
+		#rla1="routerLinkActive"
+		[active]="rla1.isActive"></a>
+</nav>
