--- a/FRONTEND/src/app/module/reccer/interview/interview.component.html
+++ b/FRONTEND/src/app/module/reccer/interview/interview.component.html
@@ -14,6 +14,12 @@
 					<input matInput type="text" formControlName="search" placeholder="User name">
 				</mat-form-field>
 
+				<section
+					style="width: 100%; background-color: #ffffff; border-top-left-radius: 0.25rem; border-top-right-radius: 0.25rem;">
+					<p class="p-3"><mat-slide-toggle formControlName="onlyMine"> Only Mine</mat-slide-toggle>
+					</p>
+				</section>
+
 				<mat-form-field style="width: 100%;">
 					<mat-label>Sort</mat-label>
 					<mat-select formControlName="sortString">
@@ -32,9 +38,16 @@
 					<mat-label>Status</mat-label>
 					<mat-select formControlName="companyStatus">
 						<mat-option value=""></mat-option>
-						<mat-option value="{{this.interview_CompanyStatus.Pending}}">Pending</mat-option>
-						<mat-option value="{{this.interview_CompanyStatus.Passed}}">Passed</mat-option>
-						<mat-option value="{{this.interview_CompanyStatus.Failed}}">Failed</mat-option>
+						<mat-option style="color: darkgoldenrod;"
+							value="{{this.interview_CompanyStatus.PENDING}}">PENDING</mat-option>
+						<mat-option style="color: darkgreen;"
+							value="{{this.interview_CompanyStatus.PASSED}}">PASSED</mat-option>
+						<mat-option style="color: darkgreen;"
+							value="{{this.interview_CompanyStatus.PASSED_N_MAILED}}">PASSED AND
+							MAILED</mat-option>
+						<mat-option style="color: darkred;"
+							value="{{this.interview_CompanyStatus.FAILED}}">FAILED</mat-option>
+
 					</mat-select>
 				</mat-form-field>
 
@@ -75,18 +88,43 @@
 			<div class="mt-3 mb-3 d-flex flex-row">
 				<div (click)="this.openAddFormDialog('100ms', '0ms')">
 					<app-expandbutton notExpandedWidth="50px" color="primary" expandedWidth="200px"
-						expandedLabel="Add new interview" icon="add"></app-expandbutton>
+						expandedLabel="Add New Interview" icon="add"></app-expandbutton>
 				</div>
 				<div class="ms-2" (click)="this.openSendMultiEmailDialog('100ms', '0ms')">
-					<app-expandbutton color="accent" notExpandedWidth="100px" expandedWidth="200px"
-						expandedLabel="Mail to people" icon="multi-mail"></app-expandbutton>
+					<app-expandbutton color="accent" notExpandedWidth="100px" expandedWidth="300px"
+						expandedLabel="Mail To Multiple Candidates" icon="multi-mail"></app-expandbutton>
+				</div>
+				<div class="mt-2 d-flex ms-auto flex-row justify-content-center fs-3">
+					Result count: {{this.fetchedInterviews?.length}}
 				</div>
 			</div>
 			<div style="height: 600px; overflow-y: scroll; border: rgb(219, 219, 219) solid 1px;">
 				@for (item of this.fetchedInterviews; track item) {
-				<div class="card p-4 m-3 shadow">
+				<div class="card p-4 m-3 shadow custom-seleted">
+					<div class="mb-3 d-flex flex-row">
+						<button
+							[disabled]="(item.company_Status !== this.interview_CompanyStatus.PENDING) || (item.recruiterId !== this.recruiter?.recruiterId)"
+							(click)="openEditFormDialog(item, '100ms', '0ms')" style="width: fit-content;"
+							mat-raised-button color="primary"><mat-icon>edit</mat-icon>
+							Edit</button>
+
+						<div class="ms-2" (click)="this.openEmail(item.application?.cv?.candidate?.user?.email)"
+							[style]="(item.company_Status !== this.interview_CompanyStatus.PASSED) || (item.recruiterId !== this.recruiter?.recruiterId) ? ' pointer-events: none;' : ''">
+							<app-expandbutton notExpandLabel="Mail" color="accent" notExpandedWidth="100px"
+								expandedWidth="250px" expandedLabel="Mail Result To Candidate" icon="mail"
+								[disabled]="(item.company_Status !== this.interview_CompanyStatus.PASSED) || (item.recruiterId !== this.recruiter?.recruiterId)"></app-expandbutton>
+						</div>
+						<div class="ms-2"
+							(click)="this.openConfirmDialog(item.interviewId, item.company_Status, '100ms', '0ms')"
+							[style]="(item.company_Status !== this.interview_CompanyStatus.PASSED) || (item.recruiterId !== this.recruiter?.recruiterId) ? ' pointer-events: none;' : ''">
+							<app-expandbutton notExpandLabel="Mailed" color="primary" notExpandedWidth="120px"
+								expandedWidth="200px" expandedLabel="Note That Emailed" icon="check"
+								[disabled]="(item.company_Status !== this.interview_CompanyStatus.PASSED) || (item.recruiterId !== this.recruiter?.recruiterId)"></app-expandbutton>
+						</div>
+					</div>
+
 					<div>
-						<div class="heading fs-5 d-flex flex-row">
+						<div class=" heading fs-5 d-flex flex-row">
 							<div>
 								{{item.meetingDate | date:"fullDate"}}
 							</div>
@@ -106,6 +144,7 @@
 							</div>
 						</div>
 					</div>
+
 					<div class="d-flex flex-row" style="width: 100%;">
 						<div class="fs-5 mt-4" style="width: 100%;">
 							<div class="heading fs-5 d-flex flex-row">
@@ -141,6 +180,9 @@
 								</div>
 								<div style="text-align: center; overflow-wrap: break-word;">
 									{{item.interviewer?.user?.fullName}}</div>
+								<a [href]="'https://mail.google.com/mail/?view=cm&fs=1&to=' + item.interviewer?.user?.email"
+									style="text-align: center; overflow-wrap: break-word;">
+									{{item.interviewer?.user?.email}}</a>
 							</div>
 							<div class="col-sm d-flex flex-column align-items-center"
 								style="width: 150px; height: fit-content;">
@@ -158,21 +200,26 @@
 							</div>
 						</div>
 					</div>
-					<div class="d-flex flex-column align-items-center">
+					<div class="d-flex mt-2 flex-column align-items-center">
 						@switch (item.company_Status) {
-						@case (this.interview_CompanyStatus.Pending) {
-						<div class="p-2 rounded-2" style=" background-color: rgb(195, 195, 84);">
-							Pending
+						@case (this.interview_CompanyStatus.PENDING) {
+						<div class="p-2 rounded-2 bg-warning fw-bold">
+							PENDING
 						</div>
 						}
-						@case (this.interview_CompanyStatus.Passed) {
-						<div class="p-2 rounded-2" style="background-color: rgb(126, 255, 126);">
-							Passed
+						@case (this.interview_CompanyStatus.PASSED) {
+						<div class="p-2 rounded-2 fw-bold bg-success text-white">
+							PASSED
 						</div>
 						}
-						@case (this.interview_CompanyStatus.Failed) {
-						<div class="p-2 rounded-2" style="background-color: #d27070; color: white;">
-							Failed
+						@case (this.interview_CompanyStatus.PASSED_N_MAILED) {
+						<div class=" p-2 rounded-2 fw-bold bg-success text-white">
+							PASSED AND MAILED
+						</div>
+						}
+						@case (this.interview_CompanyStatus.FAILED) {
+						<div class="p-2 rounded-2 bg-danger text-white fw-bold">
+							FAILED
 						</div>
 						}
 						@default {
