--- a/FRONTEND/src/app/module/reccer/interviewer/interviewer.component.html
+++ b/FRONTEND/src/app/module/reccer/interviewer/interviewer.component.html
@@ -6,8 +6,11 @@
 		</div>
 	</div>
 
-
+	<div class="mt-2 d-flex me-4 flex-row-reverse fs-3">
+		Result count: {{this.fetchedInterviewers?.length}}
+	</div>
 	<div class="d-flex flex-row" style="height: fit-content;">
+
 		<div class="p-2 rounded-2 mt-4"
 			style="width: 25%; height: fit-content; border: green solid 1px; background: linear-gradient(to right, #4b07a3, #1838ed);">
 			<form class="p-4" style="width: 100%;" [formGroup]="this.filterForm">
@@ -109,8 +112,8 @@
 								} </div>
 						</div>
 						<div class="py-2 ms-4 d-flex flex-row justify-content-center" style=" width: 25%;">
-
-							<button mat-icon-button matTooltip="New interview">
+							<button mat-icon-button matTooltip="New interview"
+								(click)="this.openAddInterviewDialog(item.interviewerId, '100ms', '0ms')">
 								<mat-icon>group_add</mat-icon>
 							</button>
 							<button mat-icon-button matTooltip="All interviews"
