--- a/FrontEnd/src/app/module/position-detail/position-detail/position-detail.component.html
+++ b/FrontEnd/src/app/module/position-detail/position-detail/position-detail.component.html
@@ -109,16 +109,15 @@
 								</div>
 								<div style="font-size: 18px; margin-top: 10px;">
 									<i class="bi bi-envelope-fill"></i>
-									<a href="mailto:{{fetchPosition?.company?.email}}" class="mt-3 ms-2"
-										style="line-height: 1.5; font-size: 16px;">
-										{{fetchPosition?.company?.email}}
+									<a href="https://mail.google.com/mail/?view=cm&fs=1&to={{fetchPosition?.company?.email}}"
+										class="mt-3 ms-2"
+										style="line-height: 1.5; font-size: 16px;">{{fetchPosition?.company?.email}}
 									</a>
 								</div>
 								<div style="font-size: 18px; margin-top: 10px;">
 									<i class="bi bi-telephone-fill"></i>
 									<a href="tel:{{fetchPosition?.company?.phone}}" class="mt-3 ms-2"
-										style="line-height: 1.5; font-size: 16px;">
-										{{fetchPosition?.company?.phone}}
+										style="line-height: 1.5; font-size: 16px;">{{fetchPosition?.company?.phone}}
 									</a>
 								</div>
 							</div>
