--- a/FrontEnd/src/app/module/cv/cv.component.html
+++ b/FrontEnd/src/app/module/cv/cv.component.html
@@ -1,4 +1,4 @@
-<!-- <mat-tab-group>
+<mat-tab-group>
 	<mat-tab>
 		<ng-template mat-tab-label>
 			<i class="fa-regular fa-user"></i>
@@ -20,7 +20,7 @@
 		</div>
 	</mat-tab>
 
-	<mat-tab>
+	<!-- <mat-tab>
 		<ng-template mat-tab-label>
 			<i class="fa-solid fa-magnifying-glass"></i>
 			<span class="px-3">Job preferences</span>
@@ -28,26 +28,5 @@
 		<div class="d-block justify-content-center p-5 border-info rounded">
 			<app-job-preference></app-job-preference>
 		</div>
-	</mat-tab>
-</mat-tab-group> -->
-
-<nav mat-tab-nav-bar>
-	<a
-		mat-tab-link
-		[routerLink]="['/cv/candidateProfile']"
-		routerLinkActive
-		#rla1="routerLinkActive"
-		[active]="rla1.isActive"></a>
-	<a
-		mat-tab-link
-		[routerLink]="['/cv/candidateProfile']"
-		routerLinkActive
-		#rla1="routerLinkActive"
-		[active]="rla1.isActive"></a>
-	<a
-		mat-tab-link
-		[routerLink]="['/cv/candidateProfile']"
-		routerLinkActive
-		#rla1="routerLinkActive"
-		[active]="rla1.isActive"></a>
-</nav>
+	</mat-tab> -->
+</mat-tab-group>
