--- a/FrontEnd/src/app/module/auth/register/register.component.html
+++ b/FrontEnd/src/app/module/auth/register/register.component.html
@@ -1,4 +1,4 @@
-<section class="vh-100" style="background-color: #eee">
+<section class="pt-5">
 	<div class="container h-100">
 		<div class="row d-flex justify-content-center align-items-center h-100">
 			<div class="col-lg-12 col-xl-11">
@@ -7,8 +7,7 @@
 						<div class="row justify-content-center">
 							<div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1">
 								<p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Đăng ký</p>
-
-								<mat-form-field (ngSubmit)="onSubmit()" [formGroup]="registerForm" class="mx-1 mx-md-4">
+								<form (ngSubmit)="onSubmit()" [formGroup]="registerForm" class="mx-1 mx-md-4">
 									<div class="d-flex flex-row align-items-center mb-4">
 										<i class="fas fa-user fa-lg me-3 fa-fw"></i>
 										<div class="form-outline flex-fill mb-0">
@@ -17,10 +16,25 @@
 												type="text"
 												class="form-control"
 												placeholder="Xưng danh đi đại hiệp"
-												formControlName="fullname" />
-											<!-- @if (registerForm) {
-											<mat-error>{{ errorMessage }}</mat-error>
-											} -->
+												formControlName="fullname"
+												required />
+											<div class="pt-2">
+												<mat-error
+													class="text-danger"
+													*ngIf="registerForm.controls['fullname'].errors?.['required']">
+													Phải nhập tên
+												</mat-error>
+												<mat-error
+													class="text-danger"
+													*ngIf="registerForm.controls['fullname'].errors?.['minlength']">
+													Tên bạn phải dài hơn 4 ký tự phải không
+												</mat-error>
+												<mat-error
+													class="text-danger"
+													*ngIf="registerForm.controls['fullname'].errors?.['pattern']">
+													Tên không chứa ký tự đăc biệt
+												</mat-error>
+											</div>
 										</div>
 									</div>
 
@@ -34,7 +48,30 @@
 												class="form-control"
 												placeholder="Nhập username"
 												formControlName="username"
-												(input)="onCheckValidUsername()" />
+												required />
+
+											<div class="pt-2">
+												<mat-error
+													class="text-danger"
+													*ngIf="registerForm.controls['username'].errors?.['required']"
+													>Phải có tên tài khoản</mat-error
+												>
+												<mat-error
+													class="text-danger"
+													*ngIf="registerForm.controls['username'].errors?.['pattern']">
+													Tên tài khoản không chứa các ký tự đặc biệt
+												</mat-error>
+												<mat-error
+													class="text-danger"
+													*ngIf="registerForm.controls['username'].errors?.['minlength']">
+													Tên tài khoản phải dài hơn 2 ký tự
+												</mat-error>
+												<mat-error
+													class="text-danger"
+													*ngIf="registerForm.controls['username'].errors?.['userNameExist']">
+													Tên tài khoản này đã được đăng ký
+												</mat-error>
+											</div>
 										</div>
 									</div>
 
@@ -47,7 +84,25 @@
 												placeholder="Nhập email"
 												id="form3Example3c"
 												class="form-control has-validation"
-												formControlName="email" />
+												formControlName="email"
+												required />
+											<div class="pt-2">
+												<mat-error
+													class="text-danger"
+													*ngIf="registerForm.controls['email'].errors?.['required']"
+													>Phải nhập email</mat-error
+												>
+												<mat-error
+													class="text-danger"
+													*ngIf="registerForm.controls['email'].errors?.['email']">
+													Email không hợp lệ
+												</mat-error>
+												<mat-error
+													class="text-danger"
+													*ngIf="registerForm.controls['email'].errors?.['emailExist']">
+													Email này đã đăng ký tài khoản
+												</mat-error>
+											</div>
 										</div>
 									</div>
 
@@ -55,12 +110,42 @@
 										<i class="fas fa-lock fa-lg me-3 fa-fw"></i>
 										<div class="form-outline flex-fill mb-0">
 											<label class="form-label" for="form3Example4c">Mật khẩu</label>
-											<input
-												type="password"
-												placeholder="Nhập password"
-												id="form3Example4c"
-												class="form-control"
-												formControlName="password" />
+											<div class="d-flex">
+												<input
+													[type]="hide1 ? 'password' : 'text'"
+													placeholder="Nhập password"
+													id="form3Example4c"
+													class="form-control"
+													formControlName="password"
+													required />
+
+												<button
+													mat-icon-button
+													matSuffix
+													(click)="hide1 = !hide1"
+													[attr.aria-label]="'Hide password'"
+													[attr.aria-pressed]="hide1">
+													<mat-icon>{{ hide1 ? 'visibility_off' : 'visibility' }}</mat-icon>
+												</button>
+											</div>
+
+											<div class="pt-2">
+												<mat-error
+													class="text-danger"
+													*ngIf="registerForm.controls['password'].errors?.['required']"
+													>Phải nhập mật khẩu</mat-error
+												>
+												<mat-error
+													class="text-danger"
+													*ngIf="registerForm.controls['password'].errors?.['minlength']">
+													Mật khẩu phải dài có độ dài tối thiểu là 8 ký tự
+												</mat-error>
+												<mat-error
+													class="text-danger"
+													*ngIf="registerForm.controls['password'].errors?.['pattern']">
+													Mật khẩu phải chứa chữ in hoa, in thường, số và ký tự đặc biệt
+												</mat-error>
+											</div>
 										</div>
 									</div>
 
@@ -68,12 +153,38 @@
 										<i class="fas fa-key fa-lg me-3 fa-fw"></i>
 										<div class="form-outline flex-fill mb-0">
 											<label class="form-label" for="form3Example4cd">Xác nhận mật khẩu</label>
-											<input
-												type="password"
-												placeholder="Nhập lai password"
-												id="form3Example4cd"
-												class="form-control"
-												formControlName="confirmPassword" />
+											<div class="d-flex">
+												<input
+													[type]="hide2 ? 'password' : 'text'"
+													placeholder="Nhập lại password"
+													id="form3Example4cd"
+													class="form-control"
+													formControlName="confirmPassword"
+													required />
+
+												<button
+													mat-icon-button
+													matSuffix
+													class="p-3"
+													(click)="hide2 = !hide2"
+													[attr.aria-label]="'Hide password'"
+													[attr.aria-pressed]="hide2">
+													<mat-icon>{{ hide2 ? 'visibility_off' : 'visibility' }}</mat-icon>
+												</button>
+											</div>
+											<div class="pt-2">
+												<mat-error
+													class="text-danger"
+													*ngIf="registerForm.controls['confirmPassword'].errors?.['required']"
+													>Phải nhập lại mật khẩu</mat-error
+												>
+
+												<mat-error
+													class="text-danger"
+													*ngIf="registerForm.controls['confirmPassword'].errors?.['mustMatch']">
+													Mật khẩu không khớp
+												</mat-error>
+											</div>
 										</div>
 									</div>
 
@@ -88,7 +199,7 @@
 									<div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
 										<button type="submit" class="btn btn-primary btn-lg">Đăng ký</button>
 									</div>
-								</mat-form-field>
+								</form>
 							</div>
 							<div class="col-md-10 col-lg-6 col-xl-7 d-flex align-items-center order-1 order-lg-2">
 								<img
