--- a/FrontEnd/src/app/module/auth/login/login.component.html
+++ b/FrontEnd/src/app/module/auth/login/login.component.html
@@ -30,9 +30,7 @@
 
 					<!-- Email input -->
 					<div class="form-outline mb-4">
-						<label class="form-label" for="formEmail"
-							>Username</label
-						>
+						<label class="form-label" for="formEmail">Username</label>
 						<input
 							type="text"
 							id="formEmail"
@@ -44,9 +42,7 @@
 
 					<!-- Password input -->
 					<div class="form-outline mb-3">
-						<label class="form-label" for="form3Example4"
-							>Password</label
-						>
+						<label class="form-label" for="form3Example4">Password</label>
 						<input
 							type="password"
 							id="form3Example4"
@@ -55,20 +51,13 @@
 							formControlName="password" />
 					</div>
 
-					<div
-						class="d-flex justify-content-between align-items-center">
+					<div class="d-flex justify-content-between align-items-center">
 						<!-- Checkbox -->
 						<div class="form-check mb-0">
-							<input
-								class="form-check-input me-2"
-								type="checkbox"
-								value=""
-								id="form2Example3" />
-							<label class="form-check-label" for="form2Example3">
-								Lưu mật khẩu
-							</label>
+							<input class="form-check-input me-2" type="checkbox" value="" id="form2Example3" />
+							<label class="form-check-label" for="form2Example3"> Lưu mật khẩu </label>
 						</div>
-						<a href="#!" class="text-body">Quên mật khẩu?</a>
+						<a href="/auth/forgot-password" class="text-body">Quên mật khẩu?</a>
 					</div>
 
 					<div class="text-center text-lg-start mt-4 pt-2">
@@ -81,9 +70,7 @@
 						</button>
 						<p class="small fw-bold mt-2 pt-1 mb-0">
 							Bạn chưa có tài khoản?
-							<a href="/auth/register" class="link-danger"
-								>Đăng ký tài khoản</a
-							>
+							<a href="/auth/register" class="link-danger">Đăng ký tài khoản</a>
 						</p>
 					</div>
 				</form>
