--- a/FRONTEND/src/app/module/auth/forgot-password/forgot-password.component.html
+++ b/FRONTEND/src/app/module/auth/forgot-password/forgot-password.component.html
@@ -3,7 +3,7 @@
 	<!-- Request OTP Form -->
 	<div class="row">
 		<div class="col-md-6 offset-md-3">
-			<h2>Forgot Password</h2>
+			<p class="h1 text-center">Forgot Password</p>
 			<form id="requestOtpForm">
 				<div class="form-group">
 					<label for="emailInput">Email address</label>
@@ -23,8 +23,8 @@
 
 	<!-- Reset Password Form -->
 	<div class="row mt-4">
-		<div class="col-md-6 offset-md-3">
-			<h2>Reset Password</h2>
+		<div class="col-md-6 offset-md-3 py-4z">
+			<p class="h2 text-center">Reset Password</p>
 			<form id="resetPasswordForm">
 				<div class="form-group">
 					<label for="otpInput">OTP</label>
